added index style media

--- a/index.html
+++ b/index.html
@@ -74,7 +74,23 @@
                 <input type="checkbox" name="toute" value="toute"> Toute les pages<br>
                 <input type="checkbox" name="aucun" value="aucun"> Aucune<br>
             </div>
-            <div id = "q6" >
+            <div id ="q6">Sur une échelle de 10 vous donneriez une note de combien pour le site web?<br>
+                <select name="note">
+                    <option value="1-3" selected="selected">0</option>
+                    <option value="3-5" selected="selected">1</option>
+                    <option value="6-5" selected="selected">2</option>
+                    <option value="toute" selected="selected">3</option>
+                    <option value="1-3" selected="selected">4</option>
+                    <option value="3-5" selected="selected">5</option>
+                    <option value="6-5" selected="selected">6</option>
+                    <option value="toute" selected="selected">7</option>
+                    <option value="1-3" selected="selected">8</option>
+                    <option value="3-5" selected="selected">9</option>
+                    <option value="6-5" selected="selected">10</option>
+                    
+                </select>
+            </div>
+            <div id = "q7" >
                 Laissez-nous un commentaire<br id =comments>
                 <textarea rows="5" cols="30"/></textarea>
             </div>
