--- a/grocery/index.html
+++ b/grocery/index.html
@@ -50,14 +50,14 @@ And majority of implementation of js and html files was obtained from professor 
         </div>
 
         <div id="Products" class="tabcontent">
-            <h2>Les produit préselectionner</h2>
+            <h2>Les produits préselectionner</h2>
             <h3>Nous avons préselectionner nos produits en fonctions de votre restriction.</h3>
-                <h4>Choisisez les produits à acheter:</h4>
+                <h3>Choisisez les produits à acheter:</h3>
                 <p>(les produits sont d'ordres de prix descendant) </p>
                 
                 <div id="displayProduct"></div>
                 <button id="addCart" type="button" class="block" onclick="selectedItems()">
-                Add selected items to cart.
+                Ajouter au panier.
             </button>
             <div id="btn">
                 <button class="suivant" onclick="openInfo(event, 'Cart')">SUIVANT</button>
@@ -65,8 +65,8 @@ And majority of implementation of js and html files was obtained from professor 
         </div>
   
         <div id="Cart" class="tabcontent">
-            <h3>Panier</h3>
-            <h4>Voici votre panier:</h4>
+            <h2>Panier</h2>
+            <h3>Voici votre panier:</h3>
             <div id="displayCart"></div>
         </div>
     </header>
